# Random2

./: .gitignore  License  README.md  pyproject.toml  requirements.txt
demo/: evaluate_calibration.py  evaluate_ood_detection.py  train_model.py
src/data/: preprocessing.py
src/evaluation/: calibration.py  inference.py  ood_detection.py
src/models/: densenet.py  linear.py  mlp.py  resnet.py  vit.py
src/training/: random_training.py  train.py
